premier test JS

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Roboto+Slab:wght@400;900&display=swap" rel="stylesheet">
+	
+	<!-- j'ajouter le script-->
+	<script src="assets/script.js"></script>
+
 </head>
 <body>
 <header class="container">
@@ -18,9 +22,9 @@
 </header>
 <main>
 	<div id="banner">
-		<img class="arrow_left" src="./assets/images/arrow_left.png" alt="fleche de gauche">
+		<img class="arrow_left" src="./assets/images/arrow_left.png" alt="fleche de gauche" id="arrow_left">
 		<img class="banner-img" src="./assets/images/slideshow/slide1.jpg" alt="Banner Print-it">
-		<img class="arrow_right" src="./assets/images/arrow_right.png" alt="fleche de droite">
+		<img class="arrow_right" src="./assets/images/arrow_right.png" alt="fleche de droite" id="arrow_right">
 		<p>Impressions tous formats <span>en boutique et en ligne</span></p>
 		<div class="dots">
 		</div>
