--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Roboto+Slab:wght@400;900&display=swap" rel="stylesheet">
 	
 	<!-- j'ajouter le script-->
-	<script src="assets/script.js"></script>
+	<script src="assets/script.js" defer></script>
 
 </head>
 <body>
@@ -22,9 +22,9 @@
 </header>
 <main>
 	<div id="banner">
-		<img class="arrow_left" src="./assets/images/arrow_left.png" alt="fleche de gauche" id="arrow_left">
+		<img class="arrow_left" src="./assets/images/arrow_left.png" alt="fleche de gauche">
 		<img class="banner-img" src="./assets/images/slideshow/slide1.jpg" alt="Banner Print-it">
-		<img class="arrow_right" src="./assets/images/arrow_right.png" alt="fleche de droite" id="arrow_right">
+		<img class="arrow_right" src="./assets/images/arrow_right.png" alt="fleche de droite">
 		<p>Impressions tous formats <span>en boutique et en ligne</span></p>
 		<div class="dots">
 		</div>
@@ -129,6 +129,5 @@
 		<img class="footer-logo" src="./assets/images/logo.png" alt="Print it ! Impressions d'entreprises" >
 	</div>
 </footer>
-<script src="./assets/script.js"></script>
 </body>
 </html>
