--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Roboto+Slab:wght@400;900&display=swap" rel="stylesheet">
 	
 	<!-- j'ajouter le script-->
+
 	<script src="assets/script.js" defer></script>
 
 </head>
@@ -27,6 +28,10 @@
 		<p>Impressions tous formats <span>en boutique et en ligne</span></p>
 		<img class="arrow_right" src="./assets/images/arrow_right.png" alt="fleche de droite">
 		<div class="dots">
+			<span class="dot dot_selected"></span>
+			<span class="dot"></span>
+			<span class="dot"></span>
+			<span class="dot"></span>
 		</div>
 	</div>
 	<section id="about-us" class="container">
