--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Roboto+Slab:wght@400;900&display=swap" rel="stylesheet">
 	
-	<!-- j'ajouter le script-->
+	<!-- j'ajoute le script-->
 
 	<script src="assets/script.js" defer></script>
 
@@ -24,7 +24,7 @@
 <main>
 	<div id="banner">
 		<img class="arrow_left" src="./assets/images/arrow_left.png" alt="fleche de gauche">
-		<img class="banner-img" src="./assets/images/slideshow/slide1.jpg" alt="Banner Print-it">
+		<img class="banner-img" src="./assets/images/slideshow/slide1.jpg" alt="Banner Print-it" id="images-slides" >
 		<p>Impressions tous formats <span>en boutique et en ligne</span></p>
 		<img class="arrow_right" src="./assets/images/arrow_right.png" alt="fleche de droite">
 		<div class="dots">
